added package to ftp script

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 *~
 *.o
 *.d
-linux32/Smash
-linux32/ObjectViewer
-linux32/ControllerManager
+linux64/Smash
+linux64/ObjectViewer
+linux64/ObjectEditor
+linux64/ControllerManager
 windows32/Smash_i686.exe
 windows32/ObjectViewer_i686.exe
+windows32/ObjectEditor_i686.exe
 windows32/ControllerManager_i686.exe
 windows64/Smash_x86_64.exe
 windows64/ObjectViewer_x86_64.exe
+windows64/ObjectEditor_x86_64.exe
 windows64/ControllerManager_x86_64.exe
